; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/sort/extr_tuplestore.c_tuplestore_gettupleslot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/sort/extr_tuplestore.c_tuplestore_gettupleslot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tuplestore_gettupleslot(i32* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @tuplestore_gettuple(i32* %12, i32 %13, i32* %11)
  store i64 %14, i64* %10, align 8
  %15 = load i64, i64* %10, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %4
  %18 = load i32, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %17
  %21 = load i32, i32* %11, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %20
  %24 = load i64, i64* %10, align 8
  %25 = call i64 @heap_copy_minimal_tuple(i64 %24)
  store i64 %25, i64* %10, align 8
  store i32 1, i32* %11, align 4
  br label %26

26:                                               ; preds = %23, %20, %17
  %27 = load i64, i64* %10, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @ExecStoreMinimalTuple(i64 %27, i32* %28, i32 %29)
  store i32 1, i32* %5, align 4
  br label %34

31:                                               ; preds = %4
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 @ExecClearTuple(i32* %32)
  store i32 0, i32* %5, align 4
  br label %34

34:                                               ; preds = %31, %26
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i64 @tuplestore_gettuple(i32*, i32, i32*) #1

declare dso_local i64 @heap_copy_minimal_tuple(i64) #1

declare dso_local i32 @ExecStoreMinimalTuple(i64, i32*, i32) #1

declare dso_local i32 @ExecClearTuple(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
